Styles/Graphs.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');

*{  
    margin: 0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
    box-sizing: border-box;
    
}

.chart-container1 {
  height: 398px;
  width: 55vw;
  border-radius: 5px;
  background-color: rgb(255, 255, 255);
  box-shadow: 0 0 10px rgba(0,0,0,0.1);
  padding: 0 5px;
  margin-left:40px;
  margin-right:40px;
}
.chart-container2 {
  height: 398px;
  width: 23vw;
  border-radius: 5px;
  background-color: rgb(255, 255, 255);
  box-shadow: 0 0 10px rgba(0,0,0,0.1);
  padding: 0 30px;
  margin-right:40px;
}
.bothCont {
  display: flex;
  justify-content: space-between;
  margin-top: 40px;
}

 
 .DashBoxes{
   display: flex;
   justify-content: space-between;
   align-items: center;
   /* height: 120px; */
   margin: 40px 15px 15px 15px;
 }
 .First-box, .Second-box, .Third-box, .Fourth-box{
   background-color: rgb(255, 255, 255);
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
   border-radius: 5px;
   /* height: 125px; */
   padding: 17px 17px;
   display: flex;
   justify-content: space-around;
   align-items: center;
   /* width: 290px; */
   font-weight: 500;
   margin-left: 25px;
}
.Fourth-box{
  margin-right: 25px;
}
.DashBoxes p{
  line-height: 45px;
}
.boxValue{
  font-size: 20px;
  color: rgb(255, 110, 110);
}
.boxValue1{
  font-size: 20px;
  color: rgb(255, 110, 110);
  display: inline-block;
  margin-right: 10px;
}
.DashBoxes img {
  width: 40px;
  margin-left: 60px;
}
.icon4{
  width: 50px !important;
}
.boxName{
  color: rgb(114, 119, 159);
}
.male,.female{
  font-size: 11px;
  display: inline-block;
  color: rgb(114, 119, 159);
}
.male{
  margin-right: 6px;
}

